tests/error/0015.exl
let
    a = 1,
    a = 2,
    ^ERROR
in
    a
